Revision history for Perl extension PPI

1.207_01 to be released
	Summary:
	- This is a general bug fix and accuracy release

	Details:
	- Fixed #50309: literal() wrong result on "qw (a b c)"

1.206 Sun  9 Aug 2009
	Summary:
	- This is an optimisation release (1-2% speed up)
	  (Using information uncovered by a Devel::NYTProf 3 alpha)

	Details:
	- Removing som superfluous 1; returns
	- Using defined and ref to avoid highly excessive calls
	  to PPI::Util::TRUE

1.205 Mon  3 Aug 2009
	Summary:
	- This is a production release

	Details:
	- No changes from 1.204_07

1.204_07 Fri 31 Jul 2009
	Summary:
	- Minor tweaks

	Details:
	- Allow ::For and ::List to return true to ->isa(::ForLoop)
	  and do a once-per-process warning when we do.
	- Fixed a bug in Class::XSAccessor prototype.

1.204_06 Wed 22 Jul 2009
	Summary:
	- API Change

	Details:
	- Changing PPI::Structure::ForLoop to PPI::Structure::For

1.204_05 Tue 21 Jul 2009
	Summary:
	- Bug fixes in preparation for production release

	Details:
	- There is no longer any real reason to bundle the testing modules
	  except as a potential source of more bugs.
	- Removed quantifier ? on zero-length ^ in /^?for(?:each)?\z/
	- Run-time load PPI::Document instal of compile-time loading it
	- Tweak a few load orders to get PPI::Util loaded earlier.
	- Fixed location access methods on PPI::Element
	- New PPI::Statement::Include::version_literal() method.

1.204_04 Thu 16 Jul 2009
	Summary:
	- Dependency tweaks

	Details:
	- Because we bundle Test::ClassAPI, we need to explicitly match its
	  dependencies. Bumped Params::Util to 1.00.
	- Bumped a couple of deps a couple of revisions to get better XS.

1.204_03 Tue 14 Jul 2009
	Summary:
	- More bug fixing, clean up, and optimisation
	- Cleaning up contributed APIs
	- Adding some demonstration classes

	Details:
	- Implemented PPI::Transform::UpdateCopyright
	- Removed the use of 'use base'
	- Various minor simplifications
	- Renamed PPI::Statement::Switch to ::Given